# xpackage

./: CMakeLists.txt  README.md  xpackage.cmake
curl/: CMakeLists.txt
duktape/: CMakeLists.txt
example/: CMakeLists.txt  main.cpp  xpackage.cmake
example/xpackage/: xpackage.cmake
http-parser/: CMakeLists.txt
json-parser/: CMakeLists.txt
littlefs/: CMakeLists.txt
openssl/: CMakeLists.txt
sqlite/: CMakeLists.txt
stm32f1/: CMakeLists.txt
testcurl/: CMakeLists.txt  main.c
testcurl/xpackage/: xpackage.cmake
testcurl/xpackage/curl/: CMakeLists.txt
testcurl/xpackage/openssl/: CMakeLists.txt
testcurl/xpackage/pahomqtt/: CMakeLists.txt
testcurl/xpackage/zlib/: CMakeLists.txt
testcurl/xpackage/zlib/b/: .ninja_deps  .ninja_log  CMakeCache.txt  Findz.cmake  build.ninja  cmake_install.cmake  rules.ninja
testmqtt/: CA.cer  CMakeLists.txt  main.c
testmqtt/openssl/: CMakeLists.txt
xpackage/: xpackage.cmake
xpackage/json-parser/: CMakeLists.txt
xpackage/openssl/: CMakeLists.txt
xpackage/openssl/config/internal/: dso_conf.h
xpackage/pahomqtt/: CMakeLists.txt
xpackage/pahomqtt/config/: VersionInfo.h
xpackage/quickjs/: CMakeLists.txt
xpackage/zlib/: CMakeLists.txt
yoga/: CMakeLists.txt
zlib/: CMakeLists.txt
